--- a/README
+++ b/README
@@ -19,6 +19,8 @@ This is a solution to the [QR code component challenge on Frontend Mentor](https
 
 ## Overview
 
+This is my first proper GitHub project. My goal is to see if I know enough HTML and CSS to build something simple as this QR code component. I do not have Pro access to see the design files, which is a shame but I think I will manage.
+
 ### Screenshot
 
 ![](./screenshot.jpg)
@@ -37,6 +39,7 @@ Then crop/optimize/edit your image however you like, add it to your project, and
 - Live Site URL: [Add live site URL here](https://your-live-site-url.com)
 
 ## My process
+
 
 ### Built with
 
